--- a/css/main.scss
+++ b/css/main.scss
@@ -551,6 +551,9 @@ nav.goobutt{
         transform: translate3d(11.57564px, -159.58071px, 0);
     }
 }
+/* ==========================================================================
+    Popup styles start 
+    ========================================================================= */
 
 
 #popup {
@@ -574,7 +577,6 @@ nav.goobutt{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        /*overflow: visible;*/
         font-size: 18px;
         margin: 20px;
         width: 100%;
