--- a/css/main.scss
+++ b/css/main.scss
@@ -139,16 +139,7 @@ section{
     flex-wrap: wrap;
 }
 
-button{
-    border-radius: 25px;
-    background-color: $white;
-    box-shadow: $morphshad;
-    padding: 10px 30px;
-    margin: 2em;
-    border: none;
-    color: $hotpink;
-    transition: 0.16s ease-in-out;
-}
+
 button:hover{
     transform: scale(1.2);
     font-weight: 600;
@@ -164,6 +155,18 @@ header{
     justify-content: center;
     align-items: center;
     padding:0 15%;
+    
+    a{
+        border-radius: 25px;
+        background-color: $white;
+        box-shadow: $morphshad;
+        padding: 10px 30px;
+        margin: 2em;
+        border: none;
+        color: $hotpink;
+        transition: 0.16s ease-in-out;
+        text-decoration: none;
+    }
 
     img{
         width: 80vw;
@@ -279,7 +282,7 @@ header{
             font-weight: 900;
             z-index: -1;
             font-size: 2em;
-            transform: translate(-11px, -4px);
+            transform: translate(-4px, -8px);
         }
         &:before{
             content: "¿";
@@ -288,7 +291,7 @@ header{
             font-weight: 900;
             z-index: -1;
             font-size: 2em;
-            transform: translate(-27px, -7px);
+            transform: translate(-34px, -4px);
         }
     }  
 
