--- a/css/main.scss
+++ b/css/main.scss
@@ -173,15 +173,15 @@ header{
         width: 80vw;
         max-width: 500px;
         justify-self: flex-start;
-        top: 15vh;
-        position: absolute;
+        top: 10vh;
+        // position: absolute;
     }
     h1{
         font-size: 3em;
         font-weight: 600;
     }
     p{
-        margin-top: 15vh;
+        margin-top: 5vh;
         max-width: 500px;
         font-weight: 200;
         text-align: center;
