--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ header a {
   background-color: #E0E5EC;
   box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
   padding: 10px 30px;
-  margin: 2em;
+  margin: 2vh;
   border: none;
   color: #F277A8;
   transition: 0.16s ease-in-out;
@@ -154,8 +154,6 @@ header a {
 header img {
   width: 80vw;
   max-width: 500px;
-  justify-self: flex-start;
-  top: 10vh;
 }
 
 header h1 {
@@ -164,7 +162,7 @@ header h1 {
 }
 
 header p {
-  margin-top: 5vh;
+  margin: 0 5vh;
   max-width: 500px;
   font-weight: 200;
   text-align: center;
