--- a/css/main.scss
+++ b/css/main.scss
@@ -162,7 +162,7 @@ header{
         background-color: $white;
         box-shadow: $morphshad;
         padding: 10px 30px;
-        margin: 2vh;
+        margin: 5vh 0;
         border: none;
         color: $hotpink;
         transition: 0.16s ease-in-out;
@@ -181,7 +181,7 @@ header{
         font-weight: 600;
     }
     p{
-        margin:0 5vh;
+        margin:5vh 0;
         max-width: 500px;
         font-weight: 200;
         text-align: center;
